@@ -1,3 +1,10 @@
+2005-10-08  Lars Hansen  <larsh@soem.dk>
+
+	* tramp.el (tramp-perl-directory-files-and-attributes): Add error
+	handling.
+	(tramp-handle-directory-files-and-attributes): Handle perl error
+	msg.
+
 2005-10-11  Steve Youngs  <steve@sxemacs.org>
 
 	* tramp.el: Require `timer-funcs' instead of `timer' if in
